k8s/couchdb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdb
  namespace: "monitoring-progress"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.0.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5984
          volumeMounts:
            - mountPath: /opt/couchdb/data
              name: couchdb
      volumes:
        - name: couchdb
          persistentVolumeClaim:
            claimName: couchdb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: "monitoring-progress"
  labels:
    app: couchdb
spec:
  type: ClusterIP
  ports:
    - port: 5984
  selector:
    app: couchdb
