k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nginx"
spec:
  rules:
    - host: couchdb.valverde.duckdns.org
      http:
        paths:
          - backend:
              serviceName: couchdb
              servicePort: 5984
    - host: monitoring-progress-backend.valverde.duckdns.org
      http:
        paths:
          - backend:
              serviceName: nodejs-backend
              servicePort: 3000
    - host: monitoring-progress.valverde.duckdns.org
      http:
        paths:
          - backend:
              serviceName: app-frontend
              servicePort: 80
